--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "test": "buster test"
     },
     "devDependencies": {
-        "buster": "0.6"
+        "buster": ">= 0.6"
     },
     "repository": {
         "type": "git",
